--- a/UMS2/UMS2.csproj
+++ b/UMS2/UMS2.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Controller\CourseController.cs" />
     <Compile Include="Controller\LecturerController.cs" />
     <Compile Include="Controller\StudentController.cs" />
+    <Compile Include="Controller\SubjectController.cs" />
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Data\DatabaseConnection.cs" />
     <Compile Include="Data\TableManagement.cs" />
@@ -108,6 +109,12 @@
     <Compile Include="view\StudentForm.Designer.cs">
       <DependentUpon>StudentForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\SubjectForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\SubjectForm.Designer.cs">
+      <DependentUpon>SubjectForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -134,6 +141,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\StudentForm.resx">
       <DependentUpon>StudentForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\SubjectForm.resx">
+      <DependentUpon>SubjectForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
