--- a/UMS2/UMS2.csproj
+++ b/UMS2/UMS2.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\AdminController.cs" />
+    <Compile Include="Controller\AttendenceController.cs" />
     <Compile Include="Controller\ClassTimetableController.cs" />
     <Compile Include="Controller\CourseController.cs" />
     <Compile Include="Controller\ExamController.cs" />
@@ -93,6 +94,12 @@
     </Compile>
     <Compile Include="view\AdminForm.Designer.cs">
       <DependentUpon>AdminForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\AttendenceForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\AttendenceForm.Designer.cs">
+      <DependentUpon>AttendenceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="view\ClassTimetableForm.cs">
       <SubType>Form</SubType>
@@ -153,6 +160,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view\AdminForm.resx">
       <DependentUpon>AdminForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\AttendenceForm.resx">
+      <DependentUpon>AttendenceForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\ClassTimetableForm.resx">
       <DependentUpon>ClassTimetableForm.cs</DependentUpon>
