--- a/UMS2/UMS2.csproj
+++ b/UMS2/UMS2.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\UserService.cs" />
     <Compile Include="view\AdminDashboardForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,17 +120,41 @@
     <Compile Include="view\ExamForm.Designer.cs">
       <DependentUpon>ExamForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\LecturerDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\LecturerDashboard.Designer.cs">
+      <DependentUpon>LecturerDashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\LecturerForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="view\LecturerForm.Designer.cs">
       <DependentUpon>LecturerForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="view\LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="view\MarkForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="view\MarkForm.Designer.cs">
       <DependentUpon>MarkForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\RegisterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\RegisterForm.Designer.cs">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="view\StudentDashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view\StudentDashboard.Designer.cs">
+      <DependentUpon>StudentDashboard.cs</DependentUpon>
     </Compile>
     <Compile Include="view\StudentForm.cs">
       <SubType>Form</SubType>
@@ -173,11 +198,23 @@
     <EmbeddedResource Include="view\ExamForm.resx">
       <DependentUpon>ExamForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\LecturerDashboard.resx">
+      <DependentUpon>LecturerDashboard.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\LecturerForm.resx">
       <DependentUpon>LecturerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="view\LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="view\MarkForm.resx">
       <DependentUpon>MarkForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\RegisterForm.resx">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view\StudentDashboard.resx">
+      <DependentUpon>StudentDashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view\StudentForm.resx">
       <DependentUpon>StudentForm.cs</DependentUpon>
